src/assets/style/home.scss
@import "src/assets/style/custom";
main {
  padding: 2rem;
}

/* Nav */
.navbar {
  position: fixed;
  width: 60px;
  height: 100%;
  background: $gray-750;
  transition: 0.5s;
  overflow: hidden;
}
.navbar:hover,
.navbar.active{
  width: 300px;
}
.navbar ul {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  padding-left: 0;
  margin-left: -1rem;
}
.navbar ul li {
  position: relative;
  width: 125%;
  list-style: none;
}
.navbar ul li:hover {
  background: $red;
}
.navbar ul li a {
  position: relative;
  width: 100%;
  display: flex;
  text-decoration: none;
  color: $light;
}
.navbar ul li a .icon {
  position: relative;
  display: block;
  min-width: 60px;
  height: 60px;
  line-height: 60px;
  text-align: center;
}
.navbar ul li a .icon .fa{
  font-size: 24px;
}
.navbar ul li a .title {
  position: relative;
  display: block;
  padding: 0 10px;
  height: 60px;
  line-height: 60px;
  text-align: start;
  white-space: nowrap;
}
.toggle {
  position: absolute;
  top: 0;
  right: 0;
  width: 60px;
  height: 60px;
  background: $gray-750;
  cursor: pointer;
}
.toggle.active {
  background: $red;
}
.toggle:before {
  content: '\f0c9';
  font-family: FontAwesome;
  position: absolute;
  left: 0;
  width: 100%;
  height: 100%;
  line-height: 60px;
  text-align: center;
  color: $light;
}
.toggle.active:before {
  content: '\f00d';
}
@media (max-width: 767px) {
  .toggle {
    left: 0;
  }
  .navbar {
    left: -60px;
  }
  .navbar.active {
    left: 0;
    width: 100%;
    box-sizing: unset;
  }
  .navbar.active ul {
    height: 100%;
  }
  .navbar.active ul li{
    width: 30%;
    min-width: 12rem;
    margin: auto;
  }
}

